增加发布docker镜像